[package]
name = "image-effects"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"
base64 = "0.13.0"
image = "0.24.1"

[dependencies.web-sys]
web-sys = "0.3.57"
features = ["console"]